src/test/fail/assign_boolean_variable_to_int_return_fail.egern
func square(n: int): int {
    return n * n
}

var a = true
print(a)
a = square(4)
print(a)
